--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,3 +1,6 @@
+.env
+
+
 # Logs
 logs
 *.log
@@ -6,6 +9,8 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+ 
+.env
 
 node_modules
 dist
