--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,15 @@
 {
+  "name": "handworthy-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dot": "^1.1.3",
     "dotenv": "^16.5.0",
-    "env": "^0.0.2",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "twilio": "^5.7.0"
