Updates of Hosting

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-TWILIO_ACCOUNT_SID=AC68d1a854394f1cd4ee89af81485e5742
-TWILIO_AUTH_TOKEN=670f155e14815645e6a29b8954e22ef3
-TWILIO_PHONE=+18566668918
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE=
 PORT = 5000
